--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <h1>Testing index.js Module Import</h1>
 
   <script type="module">
-    import {$} from './index.js';
+    import {$} from './index.js'
+    console.log($('h1'))
     
   </script>
 </body>
