--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <script type="module">
     import {$} from './index.js'
-    console.log($('h1'))
+    $('body').inject(`new`)
     
   </script>
 </body>
