--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <script src="index.js"></script>
 </head>
 <body>
   <h1>Testing index.js Module Import</h1>
 
   <script type="module">
-    import {$} from './index.js'
     $('body').render(`new`)
     
   </script>
